# academics

./: .gitignore  CMakeLists.txt  README.md  test.cpp
code/: CMakeLists.txt  ChocAn.h  ChocAnTerminal  Makefile  interface.cpp  interface.h  main.cpp  manager.cpp  manager.h  member.cpp  member.h  people.txt  person.cpp  person.h  person_vec.cpp  person_vec.h  provider.cpp  provider.h  ser_pro.cpp  ser_pro.h  ser_pro_vec.h  service.cpp  service.h  service_vec.cpp  service_vec.h  test.cpp  utilities.cpp  utilities.h
tests/: CMakeLists.txt  ser_pro_test.cpp  service_test.cpp  utilities_test.cpp
text-documents/: people.txt  services.txt  services_provided.txt  weekly_EFT.txt
text-documents/weekly-member-reports/: AzianaraWoods_03142024.345678937.txt  PaulKlinko_03142024.345678940.txt
text-documents/weekly-provider-reports/: JoshuaHunter_03142024.345678990.txt
